--- a/app/src/main/res/layout/activity_memo_add.xml
+++ b/app/src/main/res/layout/activity_memo_add.xml
@@ -48,7 +48,7 @@
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btnEdit"
                 android:layout_weight="1"
-                android:text="Image"
+                android:text="Text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" />
             <android.support.v7.widget.AppCompatButton
